# HomeCue

./: .gitignore  DOCUMENTATION.md  LICENSE  README.md  config.example.yaml  diagnose.bat  fix-venv.bat  homecue.bat  pyproject.toml  setup.ps1  update.ps1
homecue/: __init__.py  __main__.py  config.py  const.py  core.py  ha_client.py  tray.py
homecue/effects/: engine.py
homecue/icue/: bridge.py  devices.py  profiles.py
homecue/mqtt/: client.py  discovery.py
